<resources>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="app_name">EMI Calculator</string>
    <string name="edit_text_default_value">0</string>
    <string name="button_reset_text">Reset</string>
    <string name="button_calculate_text">Calculate</string>
    <string name="emi_buttonStatisticsText">Statistics</string>
    <string name="emi_principle_textview">Principle</string>
    <string name="emi_interest_textview">Interest</string>
    <string name="hint_default_value">Enter value</string>
    <string name="emi_total_payment_text">Total Payment</string>
    <string name="emi_monthly_payment_text">EMI</string>
    <string name="emi_detail_interest_text">interest  % </string>
    <string name="emi_detail_peroid">Period</string>
    <string name="emi_detail_monthly_emi">Monthly Emi</string>
    <string name="emi_detail_total_interest">Total Interest</string>
    <string name="emi_detail_total_payment">Total Payment</string>
    <string name="emi_detailsloan_amount">Loan Amount</string>
    <string name="emi_details_heading">EMI Details</string>
    <string name="recyler_emi_period">Period</string>
    <string name="recycler_emi_principle_paid">Principle Paid</string>
    <string name="recycler_emi_interest">Interest</string>
    <string name="recycler_heading_principle_remain">Balance</string>
    <string name="Loan_comparison_heading">Loan Comparison</string>
    <string name="Loan_one_heading">Loan 1</string>
    <string name="Loan_two_heading">Loan 2</string>
    <string name="loan_amount_textview">Loan Amount</string>
    <string name="loan_interest_textview">Interest %</string>
    <string name="loan_period_textview">Period</string>
    <string name="button_share_text">Share Result</string>
    <string name="monthly_loan_payment_textview">Monthly EMI</string>
    <string name="loan_interest_payable_textview">Interest Payable</string>
    <string name="loan_Total_Pay_textview">Total Payment</string>

    <string name="difference_total_payment">Total Payment Difference</string>
    <string name="difference_monthly_emi">Monthly Emi Difference</string>
    <string name="Interest_calculator_heading">Interest Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="saving_period">Saving Period</string>
    <string name="compulsory_symbol">*</string>
    <string name="period_hint_text">Max Value 40 year</string>
    <string name="interest_calculator_deposit_frequency">Deposit Frequency</string>
    <string name="date_of_investment">Investment Date</string>
    <string name="get_date">Get Date</string>
    <string name="interest_calculator_investment_amount">Investment amount</string>
    <string name="interest_calculator_total_interst_text">Total Interest Value</string>
    <string name="interest_calculator_maturity_text">Maturity Value</string>
    <string name="investment_date_result">Investment Date</string>
    <string name="fd_calculator_heading">FD Calculator</string>
    <string name="deposit_amount_textview">Amount Of Deposit</string>
    <string name="rate_of_interest_text">Rate Of Interest</string>
    <string name="tenure_text">Tenure</string>
    <string name="edit_text_year">YEARS</string>
    <string name="edit_text_month">MONTHS</string>
    <string name="edit_text_day">DAYS</string>
    <string name="rd_calculator_heading">RD Calculator</string>
    <string name="sip_calculator_heading">SIP Calculator</string>
    <string name="ppf_calculator_heading">PPF Calculator</string>
    <string name="interest_calculator_deposit_mode">Deposit Mode</string>
    <string name="GST_calculator_heading">GST Calculator</string>
    <string name="orginal_cost">Original Cost</string>
    <string name="gst_price">GST Price</string>
    <string name="net_price">Net Price</string>

    <string name="radio_button_first_option">5%</string>
    <string name="radio_button_second_option">10%</string>
    <string name="radio_button_third_option">15%</string>
    <string name="radio_button_fourth_option">20%</string>
    <string name="radio_button_fifth_option">25%</string>
    <string name="radio_others_option">Others</string>
    <string name="VAT_calculator_heading">VAT Calculator</string>
    <string name="vat_price">VAT Price</string>
    <string name="maturity_date_result">Maturity Date</string>
    <string name="fd_compound_frequency">Compounding Frequency</string>
    <string name="sip_radio_button_year">Year</string>
    <string name="sip_radio_button_month">Month</string>
    <string name="rd_calculator_heading_details">Rd Statistics</string>
    <string name="rd_recycler_heading_rdInterest">Balance</string>
    <string name="rd_recycler_head_capitalized_interest">Interest Capitalized/Payout</string>
    <string name="rd_date">Date</string>
    <string name="rd_recycler_heading_amount_interest">Interest Amount</string>
    <string name="fd_calculator_heading_details">FD Statistics</string>
    <string name="sip_calculator_heading_details">SIP Statistics</string>
    <string name="sip_recycler_heading_amount_interest">Interest Amount</string>
    <string name="sip_recycler_head_capitalized_interest">Investment Amount</string>
    <string name="sip_recycler_heading_sipBalance">SIP Balance</string>
    <string name="ppf_calculator_heading_details">PPF Statistcs</string>
    <string name="interest_calculator_compounding_frequency">Compounding Frequency</string>
    <string name="regular_monthly_deposit_withdraw">Regular Monthly Deposit/Wthdraw</string>
    <string name="yearly_interest_textview">Annual Interest Value</string>
    <string name="Deposit">Deposit</string>
    <string name="Withdraw">Withdraw</string>
    <string name="simple_interest_calculation">Simple Interest Calculation</string>
    <string name="compound_interest_calculation">Compound Interest calculation</string>
    <string name="about_option_head">About</string>
    <string name="credit_option_head">Credit</string>
    <string name="calender_date">"Calender "</string>
    <string name="max_50_per_annum">Max 50% per annum</string>
    <string name="emi_calculator_head">Emi Calculator</string>
    <string name="adout_meaasage">The EMI Calculator app is a great solution for calculating financial calculations such as EMI, FD, RD, PPF and SIP .\n\n It also displays detailed chart of each calculation and give user an opportunity to share their calculations.\n\n \n\n Support :\n For any Support , queries and improvements regarding to this application please contact:.\n\n \n allureinfosys@gmail.com\n Thank You!!!</string>
    <string name="simple_interest">Simple Interest</string>
    <string name="compound_interest">Compound Interest</string>
    <string name="maturity_duration">Maturity Duration</string>
    <string name="credit">Credit</string>
    <string name="credit_message">1. Icons made by https://www.flaticon.com/authors/freepik from https://www.flaticon.com/\n\n 2. Images from https://pixabay.com/\n\n 3. Privacy Policy : https://sites.google.com/view/allureinfosysprivacypolicy.\n\n PS: Please contact Allure Info Systems (allureinfosys@gmail.com) for any Details.</string>
    <string name="allureinfosys_gmail_com">allureinfosys@gmail.com</string>
    <string name="total_interest">Total Interest</string>
</resources>
