<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/vat_drawer_layout"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/page_color">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:elevation="5dp"
            />

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_color"
            android:orientation="vertical"
            android:layout_margin="@dimen/layout_vertical_margin"
            >

                <TextView
                    style="@style/style_text_head"
                    android:text="@string/VAT_calculator_heading" />



            <!--        Text and edit Vertical View Amount start -->
            <LinearLayout style="@style/style_pagerview_linear_vertical">

                <LinearLayout style="@style/style_interest_calculator_inner_horizontal">
                    <TextView
                        style="@style/style_pageViewer_textView"
                        android:text="@string/deposit_amount_textview" />

                    <include layout="@layout/compulsoryhimt_layout" />

                </LinearLayout>


                <EditText
                    android:id="@+id/vat_calculation_amount_value"
                    style="@style/style_default_edit_text"
                    tools:ignore="LabelFor"
                    android:importantForAutofill="no" />

            </LinearLayout>
            <!--        Text and edit Vertical View Amount end -->


            <!--        Radio Group start -->


            <RadioGroup
                android:id="@+id/vatRadioButtonGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radio_margin">
                <RadioButton
                    android:id="@+id/radio_button_first_option"
                    style="@style/style_radio_button"
                    android:checked="false"
                    android:text="@string/radio_button_first_option" />

                <RadioButton
                    android:id="@+id/radio_button_second_option"
                    style="@style/style_radio_button"
                    android:checked="false"
                    android:text="@string/radio_button_second_option" />

                <RadioButton
                    android:id="@+id/radio_button_third_option"
                    style="@style/style_radio_button"
                    android:checked="false"
                    android:text="@string/radio_button_third_option" />

                <RadioButton
                    android:id="@+id/radio_button_fourth_option"
                    style="@style/style_radio_button"
                    android:checked="false"
                    android:text="@string/radio_button_fourth_option" />

                <RadioButton
                    android:id="@+id/radio_button_fifth_option"
                    style="@style/style_radio_button"
                    android:checked="true"
                    android:text="@string/radio_button_fifth_option" />

                <RadioButton
                    android:id="@+id/radio_button_others_option"
                    style="@style/style_radio_button"
                    android:checked="false"
                    android:text="@string/radio_others_option" />


            </RadioGroup>


            <!--        Radio Group end -->


            <!--Spinner Layout Start  Add Gst FREQUENCY-->

            <EditText
                android:id="@+id/vat_radio_Others_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/radio_margin"
                android:hint="@string/hint_default_value"
                android:inputType="number|numberDecimal"
                android:textColor="@color/white_text_color"
                android:visibility="invisible"
                android:importantForAutofill="no" />

            <LinearLayout style="@style/style_pagerview_linear_vertical">


                <Spinner
                    android:id="@+id/add_vat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:popupBackground="@color/page_color"
                    android:theme="@style/spinnerTheme">

                </Spinner>

            </LinearLayout>

            <!--Spinner Layout END  Add Gst-->


            <!--BUTTON  Layout Start   -->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">


                <include layout="@layout/space_width_layout" />


                <Button
                    android:id="@+id/vatResetButton"
                    style="@style/style_button"
                    android:text="@string/button_reset_text" />


                <include layout="@layout/space_width_layout" />

                <Button
                    android:id="@+id/vat_button_Interest_Calc_Calculate"
                    style="@style/style_button"
                    android:text="@string/button_calculate_text" />

                <include layout="@layout/space_width_layout" />


            </LinearLayout>
            <!--BUTTON Layout END   -->

            <!--RESULT Layout Start   -->



            <LinearLayout style="@style/style_pagerview_linear_vertical">

                <!--RESULT Layout Start INVESTMENT AND 6 VERTICAL START   -->

                <TextView
                    style="@style/style_pageViewer_result_textView"
                    android:text="@string/orginal_cost" />
                <TextView
                    android:id="@+id/vat_orginal_cost_value"
                    style="@style/style_pageViewer_result_textView"
                    android:text="@string/edit_text_default_value" />


                <TextView
                    style="@style/style_pageViewer_result_textView"
                    android:text="@string/vat_price" />
                <TextView
                    android:id="@+id/vat_price_value"
                    style="@style/style_pageViewer_result_textView"
                    android:text="@string/edit_text_default_value"  />


                <TextView
                    style="@style/style_pageViewer_result_textView"
                    android:text="@string/net_price" />
                <TextView
                    android:id="@+id/vat_net_price_value"
                    style="@style/style_pageViewer_result_textView"
                    android:text="@string/edit_text_default_value" />
                <!--RESULT Layout Start INVESTMENT AND 6 VERTICAL END   -->


                <Button
                    android:id="@+id/vat_share_result"
                    style="@style/style_button"
                    android:layout_gravity="center"
                    android:text="@string/button_share_text" />

            </LinearLayout>

            <!--RESULT Layout END   -->

        </LinearLayout>
    </LinearLayout>
</ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/vat_nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/home_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>